# DeveloperPowerPack

./: .gitignore  DeleteCache.bat  README.md
examples/01_Renderer/: CMakeLists.txt
examples/01_Renderer/src/: 0001_Clear.cpp  0002_Primitives.cpp  0003_Lines.cpp  0004_Points.cpp  0005_Rectangles.cpp  0006_Textures.cpp  0007_StreamingTextures.cpp  0008_RotatingTextures.cpp  0009_ScalingTextures.cpp  0010_Geometry.cpp  0011_ColorMods.cpp  0012_Viewport.cpp  0013_Cliprect.cpp  0014_ReadPixels.cpp  0015_DebugText.cpp  0016_StreamingTextures_AnimatePixels.cpp  0017_StreamingTextures_ColorPalette.cpp  0018_SimpleParticleSystem.cpp  0019_Sprite.cpp  0020_Snow.cpp  0021_Snow2.cpp  0022_Blending.cpp  0023_LineDrawingUnoptimal.cpp  0024_LineDrawingBresenham.cpp  0025_CircleDrawingBresenham.cpp  0026_SimpleParticleSystem_Profiling.cpp  0027_RenderWrappedText.cpp  0101_AsyncIOLoadBitmaps.cpp
examples/02_Audio/: CMakeLists.txt
examples/02_Audio/src/: 01_SimplePlayback.cpp  02_SimplePlaybackCallback.cpp  03_LoadWav.cpp  04_MultipleStreams.cpp
examples/03_OpenGL/: CMakeLists.txt
examples/03_OpenGL/assets/shaders/: DirectionalPointSpotLightCasters.fs  MultipleLights.vs  MultipleLightsSingleModel.fs  MultipleLightsSingleModel.vs  PBRMaterials.fs  PBRMaterials.vs  PBRMaterialsAndMultipleLightCasters.fs  Text.fs  Text.vs  TexturedMaterials.fs  VisualizeDepthBuffer.fs  VisualizeDepthBufferWithLinearizeDepth.fs  light_color_cube.fs  light_cube.fs  light_cube.vs  materials.fs  materials.vs
examples/03_OpenGL/data/: Resources.cfg  ResourcesGuitarBackpackObj.cfg  ResourcesOpenGL.cfg
examples/03_OpenGL/src/: 001_SimpleRectangle.cpp  002_ColorTriangle.cpp  003_Uniforms.cpp  004_UnitCube.cpp  005_UnitCubeF16.cpp  006_CubeTranslationAnimation.cpp  007_ModelMatrix.cpp  008_ModelAndViewAndProjectionMatrices.cpp  009_CubeAndDepthTest.cpp  00_Snippets.cpp  010_FaceCulling.cpp  011_Blending.cpp  012_Texture.cpp  013_Camera.cpp  014_LoadModel.cpp  015_InstancedRendering.cpp  016_Lighting.cpp  017_GeometryShader.cpp  018_MeshAlwaysFacingViewersEye.cpp  019_MeshWithAlpha.cpp  020_MultipleMeshWithAlpha.cpp  021_ComputeShader.cpp  022_ComputeShaderTimeBased.cpp  023_ComputeShaderAndDynamicGravityPoint.cpp  024_ComputeShaderAndColorfulParticles.cpp  025_SwitchingProjection.cpp  026_Materials.cpp  027_MaterialsTextured.cpp  028_PBRMaterials.cpp  029_PBRMaterialsAndMultipleLightCasters.cpp  030_RotatingTriangle.cpp  031_SpotLightFlashlight.cpp  032_MultipleLights.cpp  033_SampleModel.cpp  034_DepthBuffer.cpp  035_AnimatedTexturedCube.cpp  Camera.h
examples/04_Misc/: CMakeLists.txt
examples/04_Misc/src/: 001_CheckKeys.cpp  002_ChildProcess.cpp
examples/05_Algorithms/Scrolling/: .editorconfig  CMakeLists.txt
examples/05_Algorithms/Scrolling/data/: ConfigKeys.cfg  ConfigResources.cfg  Tiles.cfg
examples/05_Algorithms/Scrolling/src/: Parallax.cpp
examples/05_Algorithms/ShadowCasting/: CMakeLists.txt
examples/05_Algorithms/ShadowCasting/cmake/: gladConfig.cmake  sdl3_mixerConfig.cmake
examples/05_Algorithms/ShadowCasting/src/: Game.cpp  Game.h  ShadowCasting.cpp  Window.cpp  Window.h
examples/06_Games/02_PixelAdventure/: CMakeLists.txt  launch.vs.json
examples/06_Games/02_PixelAdventure/data/: PlayerSprite.cfg  Resources.cfg
examples/06_Games/02_PixelAdventure/src/: Game.h  Main.cpp  Snake.cpp  Snake.h  World.cpp
examples/07_Gui/03_ScrolledWindowWithButtons/: CMakeLists.txt
libraries/: CMakeLists.txt  RequiredConfigForProjectOnVFatPartition.bat  RevertConfigForProjectOnVFatPartition.bat
libraries/Glad/: info.txt
libraries/Glad/include/glad/: glad.h
libraries/Glad/src/: glad.c
libraries/SampleData/: PlayerSprite.cfg  Resources.cfg
libraries/Tilc/: DllGlobals.h  EventManager.cpp  EventManager.h  Game.cpp  Game.h  GameState.cpp  GameState.h  Globals.cpp  Globals.h  Level.cpp  Level.h  Localization.cpp  Localization.h  StateMainMenu.cpp  StateMainMenu.h  StateManager.cpp  StateManager.h  Tilc.cpp  Tilc.h  Utils.h  Window.cpp  Window.h
libraries/Tilc/Audio/: Music.cpp  Music.h
libraries/Tilc/Commerce/: Message.h  Money.cpp  Money.h
libraries/Tilc/Data/: DataDbResources.cpp  DataDbResources.h  Db.cpp  Db.h  DbMySQL.cpp  DbMySQL.h  DbSQLite.cpp  DbSQLite.h
libraries/Tilc/Game2D/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
libraries/Tilc/Game3D/: CommonGLGameState.cpp  CommonGLGameState.h
libraries/Tilc/Graphics/: Camera.cpp  Camera.h  GraphicsUtils.cpp  GraphicsUtils.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ShapeOutline.cpp  ShapeOutline.h  TextRenderer.cpp  TextRenderer.h
libraries/Tilc/Gui/: Button.cpp  Button.h  Caret.cpp  Caret.h  Clipboard.cpp  Clipboard.h  Cursor.cpp  Cursor.h  CursorResources.cpp  CursorResources.h  Font.cpp  Font.h  GuiControl.cpp  GuiControl.h  Label.cpp  Label.h  Menu.cpp  Menu.h  MessageBox.cpp  MessageBox.h  ScrollBar.cpp  ScrollBar.h  ScrollBarHorizontal.cpp  ScrollBarHorizontal.h  ScrollBarVertical.cpp  ScrollBarVertical.h  SliderHorizontal.cpp  SliderHorizontal.h  SliderVertical.cpp  SliderVertical.h  StyledWindow.cpp  StyledWindow.h  TextBox.cpp  TextBox.h  TextField.cpp  TextField.h  Theme.cpp  Theme.h
libraries/Tilc/Resources/: ResourceManager.h  Resources.cpp  Resources.h  TextureManager.cpp  TextureManager.h
libraries/Tilc/Utils/: Archives.cpp  Archives.h  ArrayUtils.cpp  ArrayUtils.h  Base64.cpp  Base64.h  CodePageConverter.cpp  CodePageConverter.h  CommandLine.cpp  CommandLine.h  Crypto.cpp  Crypto.h  ExtString.cpp  ExtString.h  FileUtils.cpp  FileUtils.h  JsonParser.cpp  JsonParser.h  Locale.cpp  Locale.h  Log.cpp  Log.h  Math.cpp  Math.h  Matrix.cpp  Matrix.h  Object.cpp  Object.h  Profiler.cpp  Profiler.h  Quaternion.cpp  Quaternion.h  StdObject.cpp  StdObject.h  SystemUtils.cpp  SystemUtils.h  Timer.cpp  Timer.h  Tree.cpp  Tree.h  (+7 more)
libraries/cmake/: assimpConfig.cmake  mysqlConfig.cmake
tests/ExtString/: .editorconfig  CMakeLists.txt
tests/ExtString/cmake/: glmConfig.cmake  sdl3_netConfig.cmake
tools/GuiGraphicsGenerator/: CMakeLists.txt
tools/GuiGraphicsGenerator/src/: main.cpp
(+110 files in other folders)
