cmake_minimum_required(VERSION 3.29)

project(SDL3_Samples VERSION 1.0)

add_library(SDL3_Samples_compiler_flags INTERFACE)
target_compile_features(SDL3_Samples_compiler_flags INTERFACE cxx_std_20)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")

option(WindowsSubsystemOn "Use Windows Subsystem instead of Console Subsystem" OFF)
option(WITH_FEATURE_B "Option description" ON)

set(SetSubsystem "/SUBSYSTEM:CONSOLE")
#set(SetSubsystem "/SUBSYSTEM:WINDOWS")

if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
    set(TilcBinDir "x64-Debug")
else()
    set(TilcBinDir "x64-Release")
endif()
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../../../../../libraries/out/build/${TilcBinDir}/Tilc.dll" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

add_executable(0001_Clear src/0001_Clear.cpp)
set_target_properties(0001_Clear PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0001_Clear PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0001_Clear PRIVATE "${SetSubsystem}")
target_link_directories(0001_Clear PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0001_Clear PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0001_Clear PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0002_Primitives src/0002_Primitives.cpp)
set_target_properties(0002_Primitives PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0002_Primitives PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0002_Primitives PRIVATE "${SetSubsystem}")
target_link_directories(0002_Primitives PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0002_Primitives PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0002_Primitives PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0003_Lines src/0003_Lines.cpp)
set_target_properties(0003_Lines PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0003_Lines PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0003_Lines PRIVATE "${SetSubsystem}")
target_link_directories(0003_Lines PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0003_Lines PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0003_Lines PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0004_Points src/0004_Points.cpp)
set_target_properties(0004_Points PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0004_Points PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0004_Points PRIVATE "${SetSubsystem}")
target_link_directories(0004_Points PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0004_Points PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0004_Points PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0005_Rectangles src/0005_Rectangles.cpp)
set_target_properties(0005_Rectangles PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0005_Rectangles PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0005_Rectangles PRIVATE "${SetSubsystem}")
target_link_directories(0005_Rectangles PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0005_Rectangles PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0005_Rectangles PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0006_Textures src/0006_Textures.cpp)
set_target_properties(0006_Textures PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0006_Textures PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0006_Textures PRIVATE "${SetSubsystem}")
target_link_directories(0006_Textures PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0006_Textures PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0006_Textures PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0007_StreamingTextures src/0007_StreamingTextures.cpp)
set_target_properties(0007_StreamingTextures PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0007_StreamingTextures PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0007_StreamingTextures PRIVATE "${SetSubsystem}")
target_link_directories(0007_StreamingTextures PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0007_StreamingTextures PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0007_StreamingTextures PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0008_RotatingTextures src/0008_RotatingTextures.cpp)
set_target_properties(0008_RotatingTextures PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0008_RotatingTextures PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0008_RotatingTextures PRIVATE "${SetSubsystem}")
target_link_directories(0008_RotatingTextures PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0008_RotatingTextures PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0008_RotatingTextures PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0009_ScalingTextures src/0009_ScalingTextures.cpp)
set_target_properties(0009_ScalingTextures PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0009_ScalingTextures PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0009_ScalingTextures PRIVATE "${SetSubsystem}")
target_link_directories(0009_ScalingTextures PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0009_ScalingTextures PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0009_ScalingTextures PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0010_Geometry src/0010_Geometry.cpp)
set_target_properties(0010_Geometry PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0010_Geometry PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0010_Geometry PRIVATE "${SetSubsystem}")
target_link_directories(0010_Geometry PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0010_Geometry PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0010_Geometry PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0011_ColorMods src/0011_ColorMods.cpp)
set_target_properties(0011_ColorMods PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0011_ColorMods PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0011_ColorMods PRIVATE "${SetSubsystem}")
target_link_directories(0011_ColorMods PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0011_ColorMods PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0011_ColorMods PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0012_Viewport src/0012_Viewport.cpp)
set_target_properties(0012_Viewport PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0012_Viewport PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0012_Viewport PRIVATE "${SetSubsystem}")
target_link_directories(0012_Viewport PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0012_Viewport PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0012_Viewport PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0013_Cliprect src/0013_Cliprect.cpp)
set_target_properties(0013_Cliprect PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0013_Cliprect PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0013_Cliprect PRIVATE "${SetSubsystem}")
target_link_directories(0013_Cliprect PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0013_Cliprect PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0013_Cliprect PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0014_ReadPixels src/0014_ReadPixels.cpp)
set_target_properties(0014_ReadPixels PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0014_ReadPixels PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0014_ReadPixels PRIVATE "${SetSubsystem}")
target_link_directories(0014_ReadPixels PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0014_ReadPixels PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0014_ReadPixels PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0015_DebugText src/0015_DebugText.cpp)
set_target_properties(0015_DebugText PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0015_DebugText PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0015_DebugText PRIVATE "${SetSubsystem}")
target_link_directories(0015_DebugText PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0015_DebugText PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0015_DebugText PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0016_StreamingTextures_AnimatePixels src/0016_StreamingTextures_AnimatePixels.cpp)
set_target_properties(0016_StreamingTextures_AnimatePixels PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0016_StreamingTextures_AnimatePixels PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0016_StreamingTextures_AnimatePixels PRIVATE "${SetSubsystem}")
target_link_directories(0016_StreamingTextures_AnimatePixels PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0016_StreamingTextures_AnimatePixels PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0016_StreamingTextures_AnimatePixels PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0017_StreamingTextures_ColorPalette src/0017_StreamingTextures_ColorPalette.cpp)
set_target_properties(0017_StreamingTextures_ColorPalette PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0017_StreamingTextures_ColorPalette PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0017_StreamingTextures_ColorPalette PRIVATE "${SetSubsystem}")
target_link_directories(0017_StreamingTextures_ColorPalette PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0017_StreamingTextures_ColorPalette PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0017_StreamingTextures_ColorPalette PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0018_SimpleParticleSystem src/0018_SimpleParticleSystem.cpp)
set_target_properties(0018_SimpleParticleSystem PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0018_SimpleParticleSystem PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0018_SimpleParticleSystem PRIVATE "${SetSubsystem}")
target_link_directories(0018_SimpleParticleSystem PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0018_SimpleParticleSystem PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0018_SimpleParticleSystem PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0019_Sprite src/0019_Sprite.cpp)
set_target_properties(0019_Sprite PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0019_Sprite PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0019_Sprite PRIVATE "${SetSubsystem}")
target_link_directories(0019_Sprite PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0019_Sprite PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0019_Sprite PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0020_Snow src/0020_Snow.cpp)
set_target_properties(0020_Snow PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0020_Snow PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0020_Snow PRIVATE "${SetSubsystem}")
target_link_directories(0020_Snow PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0020_Snow PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0020_Snow PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0021_Snow2 src/0021_Snow2.cpp)
set_target_properties(0021_Snow2 PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0021_Snow2 PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0021_Snow2 PRIVATE "${SetSubsystem}")
target_link_directories(0021_Snow2 PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0021_Snow2 PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0021_Snow2 PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0022_Blending src/0022_Blending.cpp)
set_target_properties(0022_Blending PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0022_Blending PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0022_Blending PRIVATE "${SetSubsystem}")
target_link_directories(0022_Blending PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0022_Blending PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0022_Blending PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0023_LineDrawingUnoptimal src/0023_LineDrawingUnoptimal.cpp)
set_target_properties(0023_LineDrawingUnoptimal PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0023_LineDrawingUnoptimal PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0023_LineDrawingUnoptimal PRIVATE "${SetSubsystem}")
target_link_directories(0023_LineDrawingUnoptimal PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0023_LineDrawingUnoptimal PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0023_LineDrawingUnoptimal PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0024_LineDrawingBresenham src/0024_LineDrawingBresenham.cpp)
set_target_properties(0024_LineDrawingBresenham PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0024_LineDrawingBresenham PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0024_LineDrawingBresenham PRIVATE "${SetSubsystem}")
target_link_directories(0024_LineDrawingBresenham PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0024_LineDrawingBresenham PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0024_LineDrawingBresenham PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0025_CircleDrawingBresenham src/0025_CircleDrawingBresenham.cpp)
set_target_properties(0025_CircleDrawingBresenham PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0025_CircleDrawingBresenham PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0025_CircleDrawingBresenham PRIVATE "${SetSubsystem}")
target_link_directories(0025_CircleDrawingBresenham PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0025_CircleDrawingBresenham PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0025_CircleDrawingBresenham PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

add_executable(0026_SimpleParticleSystem_Profiling src/0026_SimpleParticleSystem_Profiling.cpp f:/libs/glad/src/glad.c)
set_target_properties(0026_SimpleParticleSystem_Profiling PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0026_SimpleParticleSystem_Profiling PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>"
    "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/../../libraries>"
    "$<BUILD_INTERFACE:f:/libs/glad/include>"
    "$<BUILD_INTERFACE:f:/libs/glm>"
    "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0026_SimpleParticleSystem_Profiling PRIVATE "${SetSubsystem}")
target_link_directories(0026_SimpleParticleSystem_Profiling PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/../../libraries/out/build/${TilcBinDir}>")
target_link_libraries(0026_SimpleParticleSystem_Profiling PUBLIC SDL3_Samples_compiler_flags SDL3 Tilc)
set_property(TARGET 0026_SimpleParticleSystem_Profiling PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
add_custom_command(TARGET 0026_SimpleParticleSystem_Profiling
	PRE_BUILD
	COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/../../../../../libraries/out/build/${TilcBinDir}/Tilc.dll" "${PROJECT_SOURCE_DIR}/out/build/${TilcBinDir}/Tilc.dll"
)

add_executable(0027_RenderWrappedText src/0027_RenderWrappedText.cpp)
set_target_properties(0027_RenderWrappedText PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0027_RenderWrappedText PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>"
    "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/../../libraries>"
    "$<BUILD_INTERFACE:f:/libs/glad/include>"
    "$<BUILD_INTERFACE:f:/libs/glm>"
    "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0027_RenderWrappedText PRIVATE "${SetSubsystem}")
target_link_directories(0027_RenderWrappedText PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/../../libraries/out/build/${TilcBinDir}>")
target_link_libraries(0027_RenderWrappedText PUBLIC SDL3_Samples_compiler_flags SDL3 SDL3_ttf Tilc)
set_property(TARGET 0027_RenderWrappedText PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
add_custom_command(TARGET 0027_RenderWrappedText
	PRE_BUILD
	COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/../../../../../libraries/out/build/${TilcBinDir}/Tilc.dll" "${PROJECT_SOURCE_DIR}/out/build/${TilcBinDir}/Tilc.dll"
)

add_executable(0101_AsyncIOLoadBitmaps src/0101_AsyncIOLoadBitmaps.cpp)
set_target_properties(0101_AsyncIOLoadBitmaps PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(0101_AsyncIOLoadBitmaps PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3/include>" "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
target_link_options(0101_AsyncIOLoadBitmaps PRIVATE "${SetSubsystem}")
target_link_directories(0101_AsyncIOLoadBitmaps PUBLIC ${CMAKE_CURRENT_BINARY_DIR} "$<BUILD_INTERFACE:f:/libs/SDL3>")
target_link_libraries(0101_AsyncIOLoadBitmaps PUBLIC SDL3_Samples_compiler_flags SDL3)
set_property(TARGET 0101_AsyncIOLoadBitmaps PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
